4차 코드 리뷰 요청 드립니다. (#98)
* Feat: 가이드라인 관련된 로직 및 테스트 코드 구현 (#53)

* feat: 가이드라인 dto(request) 추가

* refactor: 엔터티 이름 수정

* feat: GuardGuidelineRepository 추가

* refactor: 매개변수에 코드컨벤션 적용해 수정

* refactor: type 필드의 데이터 타입 String에서 enum으로 변경

* refactor: dto에서 type 필드 데이터 타입 수정

* feat: GuardGuidelineRepository 구현

* feat: GuardGuidelineService 추가 및 구현

* refactor: type 필드 종류 수정

* feat: GuardGuidelineController 구현

* feat: GuardGuidelineNotFoundException 구현

* feat: ControllerAdvice 구현

* refactor: Reformat Code

* refactor: 엔터티 테스트를 위한 getID()메서드 추가

* refactor: Reformat Code

* feat: 엔터티 테스트 코드 작성

* feat: Repository 테스트 코드 작성

* refactor: 사용하지 않는 매개변수 삭제

* refactor: 기본생성자 접근 제한자 protected로 수정

* feat: 해당 시니어에 대한 보호자 검증에 실패했을 때 발생시킬 예외클래스 구현

* refactor: 가이드라인 업데이트 및 추가 시 해당 시니어의 보호자인지 회원검증하는 로직 추가

* refactor: 기본 생성자의 접근제한자를 protected로 수정

* refactor: 엔터티만 독립적으로 테스트하도록 수정 및 @DisplayName 추가

* refactor: GuardGuidelineRepositoryTest에 @DisplayName 추가

* Feat: 포인트 기능 (#54)

* feat: 새로운 멤버 생성시 멤버에 포인트 연관 시킨다

* fix: 실수로 이상하게 머지된것 정상적으로 수정

* build: 타임리프 의존성 추가

* feat: 포인트 조회 기능

* feat: 포인트 로그 조회 기능

- 페이징으로 조회

* feat: 포인트 충전 기능 구현

- 관리자 페이지 구현
- 테스트 구현

* feat: 콜백, 안부전화 완료로 인한 시니또 포인트 적립 기능

* feat: 서비스 요청시 포인트 차감 관련 기능과 요청 취소시 차감된거 원복 기능 구현

- 포인트 값 변경을 위한 조회시 비관적 락 걸음

* fix: 머지후 수정사항

* feat: 포인트 적립 완료 상태 변화와 동시에 적립이 되도록하는 기능 추가

* refactor: 포인트 충전 관리자 페이지 path 경로 추가

- css html 분리

* feat: 충전 요청 시 이름+번호4자리를 입금 메시지로 적도록 수정, 충전 실패 상태 추가

* feat: 포인트 출금 요청
- 관리자 페이지 추가

* refactor: 안부전화 삭제 서비스로직 논리적 순서로 개선, 안쓰는 클래스 제거, 예외 처리 추가

* feat: 포인트 로그 전체 조회할 때 최신것부터 소팅하고, 상태도 모두 포함하도록 변경

* refactor: 포인트 충전 관련 메서드명 개선

* test: 포인트 로그 엔티티 테스트 추가

* feat: 출금 할때 수수료 적용

* fix: 치명적 PointLogRepository 오타 수정

* feat: Point 엔티티에 deduct() 메서드내부 로직에 보유한 포인트보다 더 많은 포인트 차감 요청에 대한 예외 추가

* Deploy: 더미 데이터 추가 완료 (#67)

* chore: 멤버 더미데이터 추가

* chore: 포인트, 콜백 더미데이터 추가
- 패키지 옮김

* chore