@@ -12,6 +12,10 @@ import com.example.sinitto.guard.repository.SeniorRepository;
 import com.example.sinitto.member.entity.Member;
 import com.example.sinitto.member.entity.Senior;
 import com.example.sinitto.member.repository.MemberRepository;
+import com.example.sinitto.point.entity.Point;
+import com.example.sinitto.point.entity.PointLog;
+import com.example.sinitto.point.repository.PointLogRepository;
+import com.example.sinitto.point.repository.PointRepository;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
@@ -38,12 +42,16 @@ class CallbackServiceTest {
     MemberRepository memberRepository;
     @Mock
     SeniorRepository seniorRepository;
+    @Mock
+    PointRepository pointRepository;
+    @Mock
+    PointLogRepository pointLogRepository;
     @InjectMocks
     CallbackService callbackService;
 
     @Test
     @DisplayName("getCallbacks - 성공")
-    void getCallbacks() {
+    void getWaitingCallbacks() {
         //given
         Long memberId = 1L;
         Pageable pageable = PageRequest.of(0, 10);
@@ -59,19 +67,19 @@ class CallbackServiceTest {
 
         when(memberRepository.findById(memberId)).thenReturn(Optional.of(member));
         when(member.isSinitto()).thenReturn(true);
-        when(callbackRepository.findAll(pageable)).thenReturn(callbackPage);
+        when(callbackRepository.findAllByStatus(Callback.Status.WAITING, pageable)).thenReturn(callbackPage);
 
         //when
-        Page<CallbackResponse> result = callbackService.getCallbacks(memberId, pageable);
+        Page<CallbackResponse> result = callbackService.getWaitingCallbacks(memberId, pageable);
 
         //then
         assertEquals(1, result.getContent().size());
-        assertEquals("James", result.getContent().get(0).seniorName());
+        assertEquals("James", result.getContent().getFirst().seniorName());
     }
 
     @Test
     @DisplayName("getCallbacks 멤버가 없을때 - 실패")
-    void getCallbacks_Fail_WhenNotMember() {
+    void getWaitingCallbacks_Fail_WhenNotMember() {
         //given
         Long memberId = 1L;
         Pageable pageable = PageRequest.of(0, 10);
@@ -79,7 +87,7 @@ class CallbackServiceTest {
         when(memberRepository.findById(memberId)).thenReturn(Optional.empty());
 
         //when then
-        assertThrows(NotMemberException.class, () -> callbackService.getCallbacks(memberId, pageable));
+        assertThrows(NotMemberException.class, () -> callbackService.getWaitingCallbacks(memberId, pageable));
     }
 
     @Test
@@ -94,12 +102,12 @@ class CallbackServiceTest {
         when(member.isSinitto()).thenReturn(false);
 
         //when then
-        assertThrows(NotSinittoException.class, () -> callbackService.getCallbacks(memberId, pageable));
+        assertThrows(NotSinittoException.class, () -> callbackService.getWaitingCallbacks(memberId, pageable));
     }
 
     @Test
     @DisplayName("콜백 수락 - 성공")
-    void accept() {
+    void acceptCallbackBySinitto() {
         //given
         Long memberId = 1L;
         Long callbackId = 1L;
@@ -112,7 +120,7 @@ class CallbackServiceTest {
         when(callbackRepository.findById(callbackId)).thenReturn(Optional.of(callback));
 
         //when
-        callbackService.accept(memberId, callbackId);
+        callbackService.acceptCallbackBySinitto(memberId, callbackId);
 
         //then
         verify(callback).assignMember(memberId);
@@ -121,7 +129,7 @@ class CallbackServiceTest {
 
     @Test
     @DisplayName("콜백 완료 대기 - 성공")
-    void complete() {
+    void changeCallbackStatusToCompleteByGuard() {
         //given
         Long memberId = 1L;
         Long callbackId = 1L;
@@ -136,7 +144,7 @@ class CallbackServiceTest {
         when(callback.getAssignedMemberId()).thenReturn(assignedMemberId);
 
         //when
-        callbackService.pendingComplete(memberId, callbackId);
+        callbackService.changeCallbackStatusToPendingCompleteBySinitto(memberId, callbackId);
 
         //then
         verify(callback).changeStatusToPendingComplete();
@@ -144,7 +152,7 @@ class CallbackServiceTest {
 
     @Test
     @DisplayName("수락한 콜백 취소 - 성공")
-    void cancel() {
+    void cancelCallbackAssignmentBySinitto() {
         //given
         Long memberId = 1L;
         Long callbackId = 1L;
@@ -158,7 +166,7 @@ class CallbackServiceTest {
         when(callback.getAssignedMemberId()).thenReturn(1L);
 
         //when
-        callbackService.cancel(memberId, callbackId);
+        callbackService.cancelCallbackAssignmentBySinitto(memberId, callbackId);
 
         //then
         verify(callback).cancelAssignment();
@@ -167,25 +175,31 @@ class CallbackServiceTest {
 
     @Test
     @DisplayName("새로운 콜백 등록")
-    void addCallback() {
+    void createCallbackByCall() {
         //given
         String fromPhoneNumber = "+821012341234";
         String trimmedPhoneNumber = TwilioHelper.trimPhoneNumber(fromPhoneNumber);
         Senior senior = mock(Senior.class);
+        Member member = mock(Member.class);
+        Point point = mock(Point.class);
 
         when(seniorRepository.findByPhoneNumber(trimmedPhoneNumber)).thenReturn(Optional.of(senior));
-
+        when(senior.getMember()).thenReturn(member);
+        when(member.getId()).thenReturn(1L);
+        when(pointRepository.findByMemberIdWithWriteLock(1L)).thenReturn(Optional.of(point));
+        when(point.isSufficientForDeduction(anyInt())).thenReturn(true);
         //when
-        String result = callbackService.add(fromPhoneNumber);
+        String result = callbackService.createCallbackByCall(fromPhoneNumber);
 
         //then
+        verify(pointLogRepository, times(1)).save(any());
         verify(callbackRepository, times(1)).save(any());
         assertNotNull(result);
     }
 
     @Test
     @DisplayName("새로운 콜백 등록할 때 전화온 번호가 등록된 번호가 아닐 때")
-    void addCallback_fail() {
+    void createCallbackByCallingCallback_fail() {
         //given
         String fromPhoneNumber = "+821012341234";
         String trimmedPhoneNumber = TwilioHelper.trimPhoneNumber(fromPhoneNumber);
@@ -193,31 +207,84 @@ class CallbackServiceTest {
         when(seniorRepository.findByPhoneNumber(trimmedPhoneNumber)).thenReturn(Optional.empty());
 
         //when
-        String result = callbackService.add(fromPhoneNumber);
+        String result = callbackService.createCallbackByCall(fromPhoneNumber);
 
         //then
-        verify(callbackRepository, times(0)).save(any());
+        verify(callbackRepository, never()).save(any());
+        assertNotNull(result);
+    }
+
+    @Test
+    @DisplayName("새로운 콜백 등록할 때 포인트가 부족할 때")
+    void createCallbackByCallingCallback_fail1() {
+        //given
+        String fromPhoneNumber = "+821012341234";
+        String trimmedPhoneNumber = TwilioHelper.trimPhoneNumber(fromPhoneNumber);
+        Member member = mock(Member.class);
+        Senior senior = mock(Senior.class);
+        Point point = mock(Point.class);
+
+        when(seniorRepository.findByPhoneNumber(trimmedPhoneNumber)).thenReturn(Optional.of(senior));
+        when(senior.getMember()).thenReturn(member);
+        when(member.getId()).thenReturn(1L);
+        when(pointRepository.findByMemberIdWithWriteLock(any(Long.class))).thenReturn(Optional.of(point));
+        when(point.isSufficientForDeduction(anyInt())).thenReturn(false);
+
+        //when
+        String result = callbackService.createCallbackByCall(fromPhoneNumber);
+
+        //then
+        verify(point, never()).deduct(anyInt());
+        verify(callbackRepository, never()).save(any());
+        assertNotNull(result);
+    }
+
+    @Test
+    @DisplayName("새로운 콜백 등록할 때 이미 시니어가 신청한 진행중 or 대기중인 콜백이 존재할때")
+    void createCallbackByCallingCallback_fail2() {
+        //given
+        String fromPhoneNumber = "+821012341234";
+        String trimmedPhoneNumber = TwilioHelper.trimPhoneNumber(fromPhoneNumber);
+        Member member = mock(Member.class);
+        Senior senior = mock(Senior.class);
+        Point point = mock(Point.class);
+
+        when(seniorRepository.findByPhoneNumber(trimmedPhoneNumber)).thenReturn(Optional.of(senior));
+        when(senior.getMember()).thenReturn(member);
+        when(member.getId()).thenReturn(1L);
+        when(pointRepository.findByMemberIdWithWriteLock(any(Long.class))).thenReturn(Optional.of(point));
+        when(point.isSufficientForDeduction(anyInt())).thenReturn(true);
+        when(callbackRepository.existsBySeniorAndStatusIn(any(), any())).thenReturn(true);
+
+        //when
+        String result = callbackService.createCallbackByCall(fromPhoneNumber);
+
+        //then
+        verify(point, never()).deduct(anyInt());
+        verify(callbackRepository, never()).save(any());
         assertNotNull(result);
     }
 
     @Test
     @DisplayName("보호자가 콜백 대기 상태를 완료 생태로 변경 - 성공")
-    void completeByGuard() {
+    void changeCallbackStatusToCompleteByGuardByGuard() {
         //given
         Long memberId = 1L;
         Long callbackId = 1L;
         Member member = mock(Member.class);
         Callback callback = mock(Callback.class);
         Senior senior = mock(Senior.class);
+        Point point = mock(Point.class);
 
         when(member.getId()).thenReturn(1L);
         when(callbackRepository.findById(callbackId)).thenReturn(Optional.of(callback));
         when(callback.getSenior()).thenReturn(senior);
         when(senior.getMember()).thenReturn(member);
         when(senior.getMember().getId()).thenReturn(1L);
+        when(pointRepository.findByMemberId(any())).thenReturn(Optional.of(point));
 
         //when
-        callbackService.complete(memberId, callbackId);
+        callbackService.changeCallbackStatusToCompleteByGuard(memberId, callbackId);
 
         //then
         verify(callback).changeStatusToComplete();
@@ -225,7 +292,7 @@ class CallbackServiceTest {
 
     @Test
     @DisplayName("보호자가 콜백 대기 상태를 완료 생태로 변경 - 일치하는 보호자 ID가 아니어서 실패")
-    void completeByGuard_fail() {
+    void changeCallbackStatusToCompleteByGuardByGuard_fail() {
         //given
         Long memberId = 10L;
         Long callbackId = 1L;
@@ -240,7 +307,7 @@ class CallbackServiceTest {
         when(senior.getMember().getId()).thenReturn(1L);
 
         //when then
-        assertThrows(GuardMismatchException.class, () -> callbackService.complete(memberId, callbackId));
+        assertThrows(GuardMismatchException.class, () -> callbackService.changeCallbackStatusToCompleteByGuard(memberId, callbackId));
     }
 
     @Test
@@ -276,5 +343,66 @@ class CallbackServiceTest {
 
         //when then
         assertThrows(NotExistCallbackException.class, () -> callbackService.getAcceptedCallback(memberId));
+    }
+
+    @Test
+    @DisplayName("일정 기간동안 PendingComplete 인 콜백 자동으로 Complete 로 전환  - 성공")
+    void changeOldPendingCompleteToCompleteByPolicy_Success() {
+        // Given
+        Callback callback1 = mock(Callback.class);
+        Point point = mock(Point.class);
+
+        when(callback1.getAssignedMemberId()).thenReturn(1L);
+        when(pointRepository.findByMemberId(1L)).thenReturn(Optional.of(point));
+
+        when(callbackRepository.findAllByStatusAndPendingCompleteTimeBefore(eq(Callback.Status.PENDING_COMPLETE), any(LocalDateTime.class)))
+                .thenReturn(List.of(callback1));
+
+        // When
+        callbackService.changeOldPendingCompleteToCompleteByPolicy();
+
+        // Then
+        verify(callback1, times(1)).changeStatusToComplete();
+        verify(point, times(1)).earn(1500);
+        verify(pointLogRepository, times(1)).save(any(PointLog.class));
+    }
+
+    @Test
+    @DisplayName("일정 기간동안 PendingComplete 인 콜백 자동으로 Complete 로 전환  - 조건에 맞는 콜백 없을 때")
+    void changeOldPendingCompleteToCompleteByPolicy_Success_zeroList() {
+        // Given
+        when(callbackRepository.findAllByStatusAndPendingCompleteTimeBefore(eq(Callback.Status.PENDING_COMPLETE), any(LocalDateTime.class)))
+                .thenReturn(List.of());
+
+        // When
+        callbackService.changeOldPendingCompleteToCompleteByPolicy();
+
+        // Then
+        verify(pointLogRepository, never()).save(any(PointLog.class));
+    }
+
+    @Test
+    @DisplayName("LocalDateTime 의 isBefore 메서드 공부 겸 테스트, 엣지 케이스")
+    void localDateTimeBeforeCalculateTest() {
+        //given
+        //메서드 실행 시간
+        LocalDateTime 일월3일13시00분 = LocalDateTime.of(2024, 1, 3, 13, 0);
+        LocalDateTime 일월3일13시10분 = LocalDateTime.of(2024, 1, 3, 13, 10);
+
+        //콜백이 Pending Complete 상태가 된 시간
+        LocalDateTime 일월1일12시59분 = LocalDateTime.of(2024, 1, 1, 12, 59);
+        LocalDateTime 일월1일13시00분 = LocalDateTime.of(2024, 1, 1, 13, 0);
+        LocalDateTime 일월1일13시01분 = LocalDateTime.of(2024, 1, 1, 13, 1);
+
+        //when then
+        // 1월 3일 13시 00분에 2일전에 COMPLETE 된 콜백의 존재를 확인한다.
+        assertTrue(일월1일12시59분.isBefore(일월3일13시00분.minusDays(2)));
+        assertFalse(일월1일13시00분.isBefore(일월3일13시00분.minusDays(2)));
+        assertFalse(일월1일13시01분.isBefore(일월3일13시00분.minusDays(2)));
+
+        //10분뒤인 1월 3일 13시 10분에 2일전에 COMPLETE 된 콜백의 존재를 확인한다. 결국 모두 TRUE 로 처리가 되는것을 확인.
+        assertTrue(일월1일12시59분.isBefore(일월3일13시10분.minusDays(2)));
+        assertTrue(일월1일13시00분.isBefore(일월3일13시10분.minusDays(2)));
+        assertTrue(일월1일13시01분.isBefore(일월3일13시10분.minusDays(2)));
     }
 }
